# discord-events-bot

./: .dockerignore  .flake8  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Pipfile  README.md  example_config.yaml  handler.py  pyproject.toml  setup.cfg
eventsbot/: __init__.py  constants.py  discord.py  eventsbot.py  history.py  utils.py
