[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.ropeproject
  | \.tox
  | venv.*
  | _build
  | buck-out
  | build
  | dist
  | profiling
)/
'''

[tool.pytest.ini_options]
timeout = 10

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
select = ["ALL"]
