[metadata]
name = eventsbot
version = 0.0.1
description = Discord automatic events creator
long_description = file: README.md, CHANGELOG.md, LICENSE
keywords = discord, scheduled-events
license = MIT License
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
packages = eventsbot
;install_requires =
;    ics==0.7
;    PyYAML==6.0
;    requests==2.28.0
;    schedule==1.1.0
;    importlib-metadata; python_version >= "3.10"
;
[options.entry_points]
console_scripts =
    eventsbot = eventsbot:cli
